# paperlike-i2c

./: README.md
ioctl-i2c-spy/: Cargo.toml
ioctl-i2c-spy/src/: lib.rs
paperlike-i2c/: Cargo.toml
paperlike-i2c/src/: main.rs
